# amati

./: .gitignore  .pre-commit-config.yaml  .pylintrc  Dockerfile  README.md  TEMPLATE.html  data.json  pyproject.toml  requirements.txt  setup.cfg  spdx_licences.py
.github/: dependabot.yml
.github/workflows/: checks.yaml  codeql.yml  coverage.yaml  data-refresh.yaml  publish.yaml  publish_pypi_test.yaml  scorecards.yml  tag-and-create-release.yaml
amati/: __init__.py  _error_handler.py  _factories.py  _references.py  _resolve_forward_references.py  amati.py  file_handler.py  logging.py  model_validators.py
amati/_data/files/: media-types.json  schemes.json  spdx-licences.json  tlds.json
amati/fields/: __init__.py  _custom_types.py  commonmark.py  email.py  http_status_codes.py  iso9110.py  json.py  media.py  oas.py  openapi_versions.py  reference.py  spdx_licences.py  uri.py  url.py
amati/validators/: __init__.py  contact_object.py  generic.py  http_status_codes.py  info_object.py  licence_object.py  oas304.py  oas311.py  openapi_object.py  reference_object.py
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_2c749b6d88ff70a9_generic_py.html  z_2c749b6d88ff70a9_oas311_py.html  z_2c749b6d88ff70a9_reference_object_py.html  z_6503b3da40d0f82b___init___py.html  z_6503b3da40d0f82b_logging_py.html  z_7312370d027e9810_email_py.html  z_7312370d027e9810_http_status_codes_py.html  z_7312370d027e9810_json_py.html  z_7312370d027e9810_openapi_versions_py.html  z_7312370d027e9810_spdx_licences_py.html  z_7312370d027e9810_url_py.html  z_a44f0ac069e85531_helpers_py.html  z_a44f0ac069e85531_test_logging_py.html  z_b6306ffc3ab8d0e5_test_generic_py.html  z_b6306ffc3ab8d0e5_test_licence_object_py.html  z_b6306ffc3ab8d0e5_test_oas311_py.html  z_b6306ffc3ab8d0e5_test_server_variable_object_py.html  z_b9670c86a2772bba_test_email_py.html  z_b9670c86a2772bba_test_http_status_codes_py.html  z_b9670c86a2772bba_test_openapi_version_py.html  z_b9670c86a2772bba_test_spdx_licences_py.html  z_b9670c86a2772bba_test_url_py.html
scripts/: setup_test_specs.py  spdx-licences.py
scripts/data/: media_types.py  spdx_licences.py
specs/: helpers.py  warnings.py
specs/data/: spdx-licences.json
specs/validators/: generic.py  http_status_codes.py  http_verbs.py  licence_object.py
tests/: helpers.py  strategies.py  test_contact_object.py  test_everything.py  test_external_specs.py  test_generic_object.py  test_http_status_codes.py  test_http_verbs.py  test_licence_object.py  test_logging.py  test_openapi_object.py  test_references.py  tmp_file_cmp.py
tests/data/: .amati.tests.yaml  bad_spec.yaml  good_spec.yaml  openapi.yaml
tests/data/bad/: DigitalOcean-public.v2.yaml  bad_spec.errors
tests/fields/: test_email.py  test_http_status_codes.py  test_iso9110.py  test_media.py  test_oas.py  test_openapi_version.py  test_spdx_licences.py  test_uri.py  test_url.py
tests/helpers/: helpers.py
tests/model_validators/: test_all_of.py  test_at_least_one.py  test_if_then.py  test_only_one.py
tests/references/: test_uri_reference.py  test_uri_registry.py
tests/validators/: test_generic.py  test_licence_object.py  test_oas311.py  test_security_scheme_object.py  test_server_variable_object.py
validators/: http_status_codes.py
(+2 files in other folders)
