[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "amati"
version = "0.1.0"
description = "Your project description"
authors = [{name = "Ben Alexander", email = "amati@ben-alexander.com"},]

dependencies = [
    "pydantic",
    "pyyaml",
    "abnf",
    "jsonschema",
    "rfc3987",
]
requires-python = ">=3.13"

[project.urls]
source = "https://github.com/ben-alexander/amati"

[project.optional-dependencies]

dev = [
    "pytest",
    "pytest-cov",
    "mutmut",
    "hypothesis>=6.131.25",
    "black>=25.1.0",
    "pre-commit",
    "pylint>=3.3.6",
    "isort>=6.0.1"
]

build = [
    "requests",
    "beautifulsoup4"
]

[tool.setuptools]
packages = ["amati"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
pythonpath = ["."]

[tool.isort]
src_paths = ["amati", "tests"]
known_first_party=["amati"]
known_third_party=["pytest","pydantic","yaml","abnf"]
extra_standard_library=["typing_extensions"]
profile="black"

[tool.coverage.run]
relative_files=true

[tool.pyright]
reportMissingTypeStubs=false
typeCheckingMode="strict"