[project]
name = "amati"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Ben", email = "2551337+ben-alexander@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = [
    "abnf>=2.3.1",
    "jsonschema>=4.24.0",
    "pydantic>=2.11.5",
    "pyyaml>=6.0.2",
    "rfc3987>=1.3.8",
]

[project.scripts]
amati = "amati:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "black>=25.1.0",
    "hypothesis>=6.131.28",
    "isort>=6.0.1",
    "pre-commit>=4.2.0",
    "pylint>=3.3.7",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
]

[tool.isort]
src_paths = ["amati", "tests"]
known_first_party=["amati"]
known_third_party=["pytest","pydantic","yaml","abnf", "rfc3987"]
extra_standard_library=["typing_extensions"]
profile="black"

[tool.coverage.run]
relative_files=true

[tool.pyright]
reportMissingTypeStubs=false
typeCheckingMode="strict"